// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayerControl is rendered 1`] = `
<EuiPanel
  className="mapWidgetControl mapWidgetControl-hasShadow"
  grow={false}
  hasShadow={false}
  paddingSize="none"
>
  <EuiFlexItem
    className="mapWidgetControl__header"
    component="div"
    grow={false}
  >
    <EuiFlexGroup
      alignItems="center"
      component="div"
      direction="row"
      gutterSize="none"
      justifyContent="spaceBetween"
      responsive={false}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={true}
      >
        <EuiTitle
          size="xs"
          textTransform="none"
        >
          <h2>
            Layers
          </h2>
        </EuiTitle>
      </EuiFlexItem>
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiButtonEmpty
          color="primary"
          flush="right"
          iconSide="left"
          onClick={[Function]}
          data-test-subj="addLayerButton"
          size="xs"
          type="button"
        >
          Add layer
        </EuiButtonEmpty>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlexItem>
  <EuiFlexItem
    className="mapLayerControl"
    component="div"
    grow={true}
  >
    <LayerTOC />
  </EuiFlexItem>
</EuiPanel>
`;

exports[`LayerControl props isReadOnly 1`] = `
<EuiPanel
  className="mapWidgetControl mapWidgetControl-hasShadow"
  grow={false}
  hasShadow={false}
  paddingSize="none"
>
  <EuiFlexItem
    className="mapWidgetControl__header"
    component="div"
    grow={false}
  >
    <EuiFlexGroup
      alignItems="center"
      component="div"
      direction="row"
      gutterSize="none"
      justifyContent="spaceBetween"
      responsive={false}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={true}
      >
        <EuiTitle
          size="xs"
          textTransform="none"
        >
          <h2>
            Layers
          </h2>
        </EuiTitle>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlexItem>
  <EuiFlexItem
    className="mapLayerControl"
    component="div"
    grow={true}
  >
    <LayerTOC />
  </EuiFlexItem>
</EuiPanel>
`;
